refatoração de codigo

--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,7 @@
     outline: none;
     border: none;
     text-decoration: none;
-    text-transform: capitalize;
+    /* text-transform: capitalize; */
 
 }
 
@@ -183,7 +183,7 @@
     box-sizing: border-box;
     outline: none; border:none;
     text-decoration: none;
-    text-transform: capitalize;
+    /* text-transform: capitalize; */
     transition:all .2s linear;
 }
 
