--- a/style/style.css
+++ b/style/style.css
@@ -722,7 +722,7 @@ section {
     padding: 2rem;
     position: relative;
     width: 230px;
-    
+
 }
 
 
@@ -738,6 +738,23 @@ section {
     color: var(--blue);
     border: 1px solid #333;
     cursor: pointer;
+}
+#label_image_profile .tooltipe {
+    visibility: hidden;
+    color: var(--text-color-1);
+    font-size: 1.5rem;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+
+    position: absolute;
+    z-index: 1;
+    top: -5px;
+  left: 105%;
+}
+
+#label_image_profile:hover .tooltipe {
+    visibility: visible;
 }
 
 #picture_image {
@@ -766,9 +783,9 @@ section {
     cursor: pointer;
 
 }
-.profile i:hover{
-        
-}
+
+.profile i:hover {}
+
 
 .wrapper {
     width: 100%;
@@ -1024,7 +1041,7 @@ section {
 
 
 /* announcement page */
-.announcementpage{
+.announcementpage {
     padding-top: 4rem;
 }
 
@@ -1101,3 +1118,133 @@ section {
     color: var(--text-color-2);
     line-height: 1.7;
 }
+
+/* adicionar anuncio */
+.addAnnouncement {
+    position: fixed;
+    bottom: 10px;
+    right: 50px;
+    text-align: center;
+    display: inline-block;
+}
+
+.addAnnouncement i {
+    cursor: pointer;
+    width: 48px;
+    height: 48px;
+    border-radius: 30px;
+    background-color: var(--blue);
+    border: none;
+    box-shadow: var(--box-shadow);
+    font-size: 24px;
+    color: white;
+    align-items: center;
+    padding-top: 1rem;
+}
+
+.addAnnouncement .tooltipe {
+    visibility: hidden;
+    color: var(--blue);
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+
+    position: absolute;
+    z-index: 1;
+    width: 120px;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -60px;
+}
+
+.addAnnouncement:hover .tooltipe {
+    visibility: visible;
+}
+
+.show-create {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1.0);
+}
+
+
+#formCreate .formAdd{
+    background-color: var(--bg-color-1);
+    padding: 16px 24px;
+    width: 700px;
+    border-radius: 0.5rem;
+}
+
+
+
+
+#formCreate .formAdd p{
+    color: var(--text-color-1);
+    font-size: 1.5rem;
+    padding-top: 1rem; 
+}
+
+
+
+
+#formCreate .formAdd .buttons{
+    display: flex;
+    justify-content: space-between;
+}
+#formCreate .formAdd .buttons .no{
+    width: 140px;
+    font-size: 1.7rem;
+    background: var(--red);
+    color: #fff;
+    cursor: pointer;
+    border-radius: .5rem;
+    outline: none;
+    margin-top: 2.1rem;
+}
+#formCreate .formAdd .buttons .yes{
+    width: 140px;
+    padding: 1rem 3rem;
+    font-size: 1.7rem;
+    border: 0px;
+    background: var(--blue);
+    color: #fff;
+    cursor: pointer;
+    border-radius: .5rem;
+    outline: none;
+    margin-top: 2.1rem;
+}
+
+
+
+
+
+
+
+
+
+/* .delete-content .delete-itens .no {
+    width: 140px;
+    font-size: 1.7rem;
+    background: var(--red);
+    color: #fff;
+    cursor: pointer;
+    border-radius: .5rem;
+    outline: none;
+    margin-top: 2.1rem;
+}
+
+.delete-content .delete-itens .yes {
+    width: 140px;
+    padding: 1rem 3rem;
+    font-size: 1.7rem;
+    border: 0px;
+    background: var(--blue);
+    color: #fff;
+    cursor: pointer;
+    border-radius: .5rem;
+    outline: none;
+    margin-top: 2.1rem;
+}
+ */
