corrigindo pequeno bug visual nas listas

--- a/style/style.css
+++ b/style/style.css
@@ -1216,7 +1216,11 @@ section {
     outline: none;
     margin-top: 2.1rem;
 }
-
+.listadeavisos{
+    list-style-type: none;
+    list-style-image: none;
+    list-style-position: outside;
+}
 
 
 
