adjust forms adjustments to travel page forms

--- a/style/style.css
+++ b/style/style.css
@@ -1232,6 +1232,10 @@ section {
     list-style-position: outside;
 }
 
+.form-announcement{
+    padding-top: 70rem;
+}
+
 
 .form-announcement .input-account {
     width: 100%;
